# flask_board

./: README.md  app.py  config.py  deploy.sh  pyproject.toml  requirements.txt  wsgi.py
.github/: FUNDING.yml
flask_board/: __init__.py  api.py  assets.py
flask_board/about/: about.py
flask_board/about/templates/: about_background.jinja2  about_guide.jinja2
flask_board/db_script/: create_qna.py
flask_board/home/: home.py
flask_board/home/templates/: all_links.html  index.jinja2  test.jinja2
flask_board/qna/: model.py  qna.py
flask_board/qna/templates/: qna_board.jinja2
