[tool.poetry]
name = "flask_board"
version = "0.1.0"
description = "For make flask_board"
authors = ["hyeonukdev <lego7407@gmail.com>"]
maintainers = ["hyeonukdev <lego7407@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hyeonukdev/flask_board"
keywords = [
    "Flask",
    "Blueprints",
    "Framework",
    "Python"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
faker = "*"
requests = "*"
python-dotenv = "*"
uwsgi = "^2.0.19"
ddtrace = "^0.48.2"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-blueprint-tutorial/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

